[package]
name = "icos"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2021"

[dependencies]
roxmltree = "0.14.0"
encode_unicode = "0.3.6"
imageproc = "0.22.0"
strum = {version="0.20.0", features = ["derive"] }
rust-3d = "0.34.0"
rand = "0.8.3"
rayon = "1.5.0"
serde = {version="1.0.124", features=["derive"]}
serde_json = "1.0.64"
noise = "0.7.0"
once_cell = "1.12.0"
clap = { version = "3.1.18", features = ["derive"] }

[build-dependencies]
cmd_lib = "1.3.0"
